<resources>
    <string name="app_name">Trash2Cash</string>
    <string name="company_name">Trash2Cash</string>
    <!-- Strings related to login -->
    <string name="login">Σύνδεση</string>
    <string name="UserLoginParameter1">Email χρήστη</string>
    <string name="LoginParameter2">Κωδικός πρόσβασης</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailRegister">Email Χρήστη</string>
    <string name="passwordRegister">Password Χρήστη</string>
    <string name="RegisterString">Εγγραφή</string>
    <string name="RegisterBtnString">Δημιουργεία Λογαριασμού</string>
    <string name="LoginBtnString">Σύνδεση</string>
    <string name="login_item">Login</string>
    <string name="sign_up_item">Sign Up</string>
    <string name="userNameRegister">Όνομα χρήστη</string>
    <string name="profile_image">Profile Image</string>
    <!-- Strings related to the material logger -->
    <string name="material_logger">Material Logger</string>
    <string name="itemImageTxt">Item Image</string>
    <string name="addItemBtn">Add Item</string>
    <string name="admin_request_logger">Admin Request Logger</string>
    <string name="todo">TODO</string>
    <string name="to">TODO</string>
    <!-- Strings related to the reclable material settings -->
    <string name="exp">Exp:</string>
    <string name="reward_amount">Reward amount:</string>
    <string name="empty_num_field">Numeric Value</string>
    <string name="exp_num_value">Exp Amount</string>
    <string name="reward_num_value">Reward Amount</string>
    <string name="cost_num_value">Cost Amount</string>
    <string name="level_num_value">Level Amount</string>
    <string name="type_of_recyclable_material_image">Image representing a recyclable material type</string>
    <string name="reward_image">Image representing a reward</string>
    <string name="recyclable_materials_error">The recyclable materials didn\'t load correctly</string>
    <string name="recyclablematerialsettings">RecyclableMaterialSettings</string>
    <string name="recycle_quantity">Recycle quantity:</string>
    <string name="recycle_quantity_num_value">Recycle Amount</string>
    <!-- Strings related to the reward settings -->
    <string name="add_card_symbol">+</string>
    <string name="remove_card_symbol">-</string>
    <string name="tap_an_image">Tap An Image</string>
    <string name="or_open_the_image_gallery">Or open the image gallery</string>
    <string name="reward_title_text_value">Reward Title</string>
    <string name="empty_text_field">Text Value</string>
    <string name="rewardsettings">RewardSettings</string>
    <string name="update_types">Update types</string>
    <!-- Strings related to rewards -->
    <string name="available">AVAILABLE FOR YOU</string>
    <string name="other_rewards">OTHER REWARDS</string>
    <string name="earned_points">Earned Points</string>
    <string name="claim_reward">Claim Reward</string>
    <string name="required_level_value">Required Level Value</string>
    <string name="required_cost_value">Required Cost Value</string>
    <string name="rewards">Rewards</string>
    <string name="image_gallery_is_empty">The image gallery is empty</string>
    <string name="claimed_rewards">Claimed Rewards</string>
    <string name="claimed_rewards_amount">Claimed rewards amount</string>
    <!-- Strings related to navigation -->
    <string name="stats_item">Stats</string>
    <string name="profile_item">Profile</string>
    <string name="recycle_item">Recycle</string>
    <string name="materials_item">Materials</string>
    <string name="rewards_item">Rewards</string>
    <string name="logout_item">Logout</string>
    <!-- Strings related to the user profile -->
    <string name="user_name_tag_text">Username:</string>
    <string name="user_level_tag_text">Level:</string>
    <string name="user_points_tag_text">Reward Points:</string>
    <string name="plastic_chart_text">Plastic</string>
    <string name="paper_chart_text">Paper</string>
    <string name="aluminum_chart_text">Aluminum</string>
    <string name="glass_chart_text">Glass</string>
    <string name="level_text">100</string>
    <string name="points_text">100</string>
    <string name="details_title_text">Material recycling percentage:</string>
    <string name="details_glass_text">Glass</string>
    <string name="details_plastic_text">Plastic</string>
    <string name="details_paper_text">Paper</string>
    <string name="details_aluminum_text">Aluminum</string>
    <string name="profile">profile</string>
    <string name="my_rewards_btn_text">My rewards</string>
    <string name="first_barChart_title">Amounts of materials in percentage</string>
    <string name="second_barChart_title">Amounts of glass materials in percentage</string>
    <string name="third_barChart_title">Amounts of paper materials in percentage</string>
    <string name="fourth_barChart_title">Amounts of plastic materials in percentage</string>
    <string name="fifth_barChart_title">Amounts of aluminum materials in percentage</string>
    <string name="progress_bar_title_text">Points remaining for the next reward</string>
    <string name="requests">Requests</string>
    <string name="sixth_barChart_title">Amounts of other materials in percentage</string>
    <string name="reward_progress_bar_title_text">Points remaining for the next reward</string>
    <string name="level_progress_bar_title_text">Levels remaining for the next reward</string>
    <string name="best_recyclers_leaderboard">Best Recyclers Leaderboard</string>
    <string name="total_reard_points">Total Reward Points:</string>
</resources>
