<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonMaterialLogger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material_logger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RewardSettingsTempButton" />

    <Button
        android:id="@+id/adminLoggerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_request_logger"
        app:layout_constraintBottom_toTopOf="@+id/RecyclableMaterialSettingsTempButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RecyclableMaterialSettingsTempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recyclablematerialsettings"
        app:layout_constraintBottom_toTopOf="@+id/user_profile_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/RewardSettingsTempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewardsettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_profile_btn" />

    <Button
        android:id="@+id/RewardsTempButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rewards"
        app:layout_constraintBottom_toTopOf="@+id/adminLoggerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/user_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_bar_user" />

</androidx.constraintlayout.widget.ConstraintLayout>