<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:elevation="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:contentDescription="@string/type_of_recyclable_material_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recycleAmountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/recycle_quantity"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/recylceNum"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:autofillHints="@string/empty_num_field"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/recycle_quantity_num_value"
                    android:inputType="number" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/expBar"
                style="@style/blueSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/expWordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/exp"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/expNum"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:autofillHints="@string/empty_num_field"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/exp_num_value"
                    android:inputType="number" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/rewardBar"
                style="@style/blueSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="1000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rewardAmountWordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/reward_amount"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/rewardNum"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:autofillHints="@string/empty_num_field"
                    android:background="@null"
                    android:ems="10"
                    android:hint="@string/reward_num_value"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>