<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#535050"
    tools:context=".R1.RegisterUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="255dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="EmailAddress"
            android:ems="10"
            android:hint="@string/emailRegister"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="255dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="Password"
            android:ems="10"
            android:hint="@string/passwordRegister"
            android:inputType="textPassword"
            android:textColorHint="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="249dp"
            android:layout_height="51dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="#D8D5D5"
            android:text="@string/RegisterString"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>