<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/rewardSettingsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:padding="20dp"
        app:cardBackgroundColor="@color/reward_card_grey"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/rewardImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@string/reward_image"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/rewardImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/rewardTitleText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:autofillHints="@string/empty_text_field"
                    android:hint="@string/reward_title_text_value"
                    android:nestedScrollingEnabled="true"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/costText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/costText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:maxEms="6"
                    android:maxLength="20"
                    android:singleLine="false"
                    android:textAlignment="viewEnd"
                    android:textSize="21sp"
                    app:drawableStartCompat="@drawable/reward_points"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/requiredLevelText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/empty_text_field"
                    android:hint="@string/required_level_value"
                    android:nestedScrollingEnabled="true"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rewardTitleText" />

                <TextView
                    android:id="@+id/requiredCostText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/empty_text_field"
                    android:hint="@string/required_cost_value"
                    android:nestedScrollingEnabled="true"
                    android:scrollbars="horizontal"
                    android:singleLine="true"
                    android:textColor="@color/dark_blue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/requiredLevelText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>