<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0.2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/addItemLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/addRequestedItemCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/royal_blue"
            android:padding="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="145dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="27sp">

                    <TextView
                        android:id="@+id/userTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="User" />

                    <TextView
                        android:id="@+id/materialTextView"
                        android:layout_width="159dp"
                        android:layout_height="wrap_content"
                        android:text="Material"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/ItemTextView"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:text="Item"
                        android:textSize="20sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/requestItemIMage"
                    android:layout_width="229dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/itemImageTxt"
                    app:srcCompat="@drawable/ic_launcher_foreground"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/rejectBtn"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/addItemLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81"
        app:srcCompat="@drawable/close_svgrepo_com"
        tools:srcCompat="@drawable/close_svgrepo_com" />

    <ImageView
        android:id="@+id/approveBtn"
        android:layout_width="88sp"
        android:layout_height="82sp"
        android:contentDescription="@string/to"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13"
        app:srcCompat="@drawable/check_mark_circle_svgrepo_com__1_"
        tools:srcCompat="@drawable/check_mark_circle_svgrepo_com__1_" />


</androidx.constraintlayout.widget.ConstraintLayout>